# stop-the-bus

./: .gitignore  README.md  pyproject.toml  tail-latest-log.sh  trained_model.pth
src/stop_the_bus/: Agent.py  Card.py  ConsoleAgent.py  Datalog.py  Deck.py  Driver.py  Encoding.py  Game.py  Hand.py  Log.py  NeuralAgent.py  Rating.py  SimpleAgent.py  __init__.py  __main__.py
tests/: conftest.py  test_game_logic.py  test_training.py
