[project]
name = "stop-the-bus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas", email = "me@tom-bates.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pygad>=3.5.0",
    "rich>=14.1.0",
    "torch>=2.8.0",
    "typing-extensions>=4.15.0",
]

[project.scripts]
stop-the-bus = "stop_the_bus:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "UP", "B", "A", "C4", "SIM"]
lint.ignore = ["A001", "A002"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
pythonpath = ["src"]
